# dwarfen-mohawk

./: .env.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT_NOTES.md  DEPLOY-NOW.md  Dockerfile  README.md  build_lambda_docker.ps1  create_api_key.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-lambda.txt  requirements.txt  test_api.sh
docs/: architecture.md  demo-script.md  deployment.md  known-issues.md  manual-testing-guide.md  performance.md  prd.md  task-list.md
docs/memory/: activeContext.md  progress.md  systemPatterns.md  techContext.md
examples/: README.md  __init__.py  sample_client.py
infrastructure/: __init__.py  dynamodb_tables.py
infrastructure/cloudformation/: api.yaml  dynamodb.yaml
scripts/: __init__.py  manage_api_keys.py
src/: __init__.py  config.py  exceptions.py  lambda_handler.py  main.py  main.py.backup
src/auth/: api_key.py  dependencies.py
src/handlers/: __init__.py  exception_handler.py
src/logging/: __init__.py  config.py
src/middleware/: __init__.py  logging.py  rate_limit.py  request_validation.py
src/models/: __init__.py  api_key.py  event.py
src/repositories/: __init__.py  api_key_repository.py  base.py  event_repository.py
src/routes/: admin.py  events.py  status.py
src/schemas/: event.py
src/services/: event_service.py
src/utils/: __init__.py  deduplication.py
static/: app.js  index.html  style.css
tests/auth/: test_api_key.py
tests/integration/: conftest.py  test_authentication_flow.py  test_event_lifecycle.py
tests/middleware/: test_logging.py  test_rate_limit.py
tests/performance/: README.md  __init__.py  locustfile.py
tests/repositories/: test_api_key_repository.py  test_event_repository.py
tests/routes/: test_error_handling.py  test_events_delete.py  test_events_edge_cases.py  test_events_get.py  test_events_inbox.py  test_events_post.py  test_status.py
tests/scripts/: __init__.py  test_manage_api_keys.py
tests/services/: test_event_service.py
tests/utils/: test_deduplication.py  test_pagination.py
